--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12440,16 +12440,17 @@ body.tp-magic-cursor #magic-cursor {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .tp-brand-4-area {
-    padding-top: 0;
+    /* padding-top: 0; */
   }
 }
 .tp-brand-4-item {
   border: 1px solid rgba(25, 25, 26, 0.1);
   text-align: center;
   margin: -1px 0 0 -1px;
-  padding: 60px 30px;
+  padding: 30px 30px;
   height: 150px;
   overflow: hidden;
+  align-content: center;
 }
 .tp-brand-4-item img {
   transition: 0.3s;
